extends Control


func _on_kofi_pressed():
	OS.shell_open("https://ko-fi.com/iamst")


func _on_github_pressed():
	OS.shell_open("https://github.com/IAMSTANDARD")


func _on_itch_pressed():
	OS.shell_open("https://iamst.itch.io/")


func _on_youtube_pressed():
	OS.shell_open("https://www.youtube.com/channel/UC98Sl-Tg3cUI2g613BX23cg")

func _on_twitter_pressed():
	OS.shell_open("https://twitter.com/IamstGame")


func _on_reddit_pressed():
	OS.shell_open("https://www.reddit.com/user/iamstandard")
